--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <li class="login page">
       <div class="form">
         <h3 class="title">What's your nickname?</h3>
-        <input class="usernameInput" type="text" maxlength="14" />
+          <input class="usernameInput" type="text" maxlength="14" />
+          <button class="enterb"> Confirm</button>
       </div>
     </li>
   </ul>
