--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         <ul class="messages"></ul>
       </div>
       <input class="inputMessage" placeholder="Type here..."/>
+      <button class="enterb"> Push</button>
     </li>
     <li class="login page">
       <div class="form">
