--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Socket.IO chat</title>
+  <title>Sharing Bills</title>
   <link rel="stylesheet" type="text/css" href="/style.css" >
 </head>
 <body>
@@ -10,14 +10,16 @@
       <div class="chatArea">
         <ul class="messages"></ul>
       </div>
-      <input class="inputMessage" placeholder="Type here..."/>
-      <button class="enterb"> Push</button>
+      <div class="abc">
+        <input class="inputMessage" placeholder="Type here..."/>
+        <div class="enterb"> Push</div>
+      </div>
     </li>
     <li class="login page">
       <div class="form">
         <h3 class="title">What's your nickname?</h3>
-          <input class="usernameInput" type="text" maxlength="14" />
-          <button class="enterb"> Confirm</button>
+        <input class="usernameInput" type="text" maxlength="14" />
+        <div class="enterb"> Confirm</div>
       </div>
     </li>
   </ul>
