--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       <div class="abc">
         <input class="inputMessage" placeholder="Type here..."/>
         <div class="enterb"> Push</div>
+        <button id="addperson"> +</button>
+        <button id="minusperson">-</button>
       </div>
     </li>
     <li class="login page">
