fix broadcast bugs

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         <div class="enterb"> Push</div>
         <button id="addperson"> +</button>
         <button id="minusperson">-</button>
+        <button id="resetmoney">reset money</button>
       </div>
     </li>
     <li class="login page">
