--- a/public/index.html
+++ b/public/index.html
@@ -2,32 +2,61 @@
 <html>
 <head>
   <title>Sharing Bills</title>
-  <link rel="stylesheet" type="text/css" href="/style.css" >
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link rel="stylesheet" type="text/css" href=" /css/bootstrap.min.css" >
 </head>
 <body>
-  <ul class="pages">
-    <li class="chat page">
+  <div class="container">
+
+    <!-- Modal -->
+    <div class="modal fade" id="loginpage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" data-backdrop="static" data-keyboard="false">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title text-center" id="myModalLabel">What's your nickname?</h4>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-8 col-sm-8 col-xs-8">
+                <input class="usernameInput form-control" type="text" maxlength="14" />
+              </div>
+              <div class="col-md-4 col-sm-4 col-xs-4">
+                <button type="button" class="btn btn-default enterb form-control" > Confirm</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="row form-inline" id="loginpage">
+      <h3 class="text-center">What's your nickname?</h3>
+      <div class="col-md-4 col-md-offset-4">
+        <center>
+          <input class="usernameInput form-control" type="text" maxlength="14" />
+          <button type="button" class="btn btn-default enterb form-control"> Confirm</button>
+        </center>
+      </div>
+    </div> -->
+    <div class="chat page" id="chatpage">
       <div class="chatArea">
         <ul class="messages"></ul>
       </div>
-      <div class="abc">
-        <input class="inputMessage" placeholder="Type here..."/>
-        <div class="enterb"> Push</div>
-        <button id="addperson"> +</button>
-        <button id="minusperson">-</button>
-        <button id="resetmoney">reset money</button>
+      <div class="form-inline">
+        <div class="form-group">
+          <div class="col-md-6">
+            <input class="inputMessage form-control" placeholder="Type here..."/>
+          </div>
+          <button class="enterb col-md-2 btn-default btn form-control btn-primary"> Push</button>
+          <button id="addperson" class="col-md-1 btn-default btn form-control btn-primary" type="button"> +</button>
+          <button id="minusperson" class="col-md-1 btn-default btn form-control btn-primary">-</button>
+          <button id="resetmoney" class="col-md-2 btn-default btn form-control btn-primary">reset money</button>
+        </div>
       </div>
-    </li>
-    <li class="login page">
-      <div class="form">
-        <h3 class="title">What's your nickname?</h3>
-        <input class="usernameInput" type="text" maxlength="14" />
-        <div class="enterb"> Confirm</div>
-      </div>
-    </li>
-  </ul>
+    </div>
+  </div>
   <script src="/socket.io/socket.io.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-  <script src="/main.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
