--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#" data-toggle="modal" data-target="#summaryModal">
           <span class="glyphicon glyphicon-list" aria-hidden="true"></span> Summary
         </a>
       </div>
@@ -38,7 +38,28 @@
           </div>
         </div>
       </div>
+    </div><!-- End of Modal -->
+
+    <!-- Modal Summary -->
+    <div class="modal fade" id="summaryModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Bill Summary</h4>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+          </div>
+        </div>
+      </div>
     </div>
+    <!-- End of Summary -->
+
+    <!-- Chat Content -->
     <div class="chat page" id="chatpage">
       <div class="chatArea">
         <ul class="messages"></ul>
