--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,8 @@
             <h4 class="modal-title" id="myModalLabel">Bill Summary</h4>
           </div>
           <div class="modal-body">
-            ...
+            <p id="summaryinfo">
+            </p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
