--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>Sharing Bills</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="stylesheet" type="text/css" href=" /css/bootstrap.css" >
 </head>
 <body>
