--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link href="/startup.png" media="(device-width: 414px) and (device-height: 736px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image">
   <link rel="stylesheet" type="text/css" href=" /css/bootstrap.css" >
+  <link rel="stylesheet" type="text/css" href=" /css/customstyle.css" >
 </head>
 <body>
 
@@ -62,6 +63,10 @@
       </div>
     </div>
     <!-- End of Summary -->
+
+    <div class="participantinfo">
+      <p id="participant" class="bg-info"></p>
+    </div>
 
     <!-- Chat Content -->
     <div class="chat page" id="chatpage">
